# tree-sitter-plsql

./: .gitignore  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package-lock.json  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
examples/: alter_function.sql  alter_library.sql  alter_package.sql  alter_procedure.sql  alter_trigger.sql  alter_type.sql  create_package.sql  create_package_body.sql  drop_object.sql  select_statements.sql
src/: grammar.json  node-types.json  parser.c
